<resources>

    <!-- Common strings -->
    <string name="stub" translatable="false">TODO</string>
    <string name="unknownErrorNotification">Unknown error happened</string>
    <string name="tokenError">Authorization failed</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Bottom Sheet Auth Screen -->
    <string name="authTitle">Let\'s get acquainted</string>
    <string name="authReason">Some features in our app require user to be authorized.\n%s is one of this features.\nPlease use one of the services below.</string>
    <string name="authReasonFromProfile">You can sign in with any of services shown below</string>

    <!-- Scan Screen -->
    <string name="qrCodeInvalidFormat">This QR is invalid.\nCheck if you are using the latest Läcker version</string>
    <string name="screenTitleScan">Scan QR</string>
    <string name="scanHelpHint">You can toggle flash\non (volume UP)\nand\noff (volume DOWN)</string>

    <!-- Menu Screen -->
    <string name="menuScreenTitle">Menu</string>
    <string name="orderCreationAuthReason">Order creation</string>
    <string name="basketScreenTitle">Basket</string>
    <string name="startCooking">Start cooking</string>
    <string name="favouriteScreenTitle">Favourite</string>
    <string name="orderScreenTitle">Order</string>
    <string name="staffCalling">Staff calling</string>
    <string name="leaveYourCommentHere">Leave your comment here</string>
    <string name="youHaveChosenDishes">You have chosen %d dishes</string>
    <string name="confirm">Confirm</string>
    <string name="dateTimeTitleText">Created at %s</string>
    <string name="failedToParseDateTime">Failed to parse date and time</string>
    <string name="noComment">You left no comment</string>
    <string name="yourComment">Your comment: %s</string>
    <string name="drinksImmediately">Drinks asap: %s</string>
    <string name="requestSent">Request sent</string>
    <string name="orderImmediately">Order immediately</string>

    <!-- Call Staff Screen -->
    <string name="weWillNotifyStaff">Your request was accepted, please wait</string>
    <string name="callStaff">Call the waiter for…</string>
    <string name="bankCardPayment">Bank card payment</string>
    <string name="cashPayment">Cash payment</string>
    <string name="consultation">Consultation</string>
    <string name="shouldSelectRestaurantBeforeCallStaff">You should select restaurant before call staff</string>

    <!-- Profile Screen -->
    <string name="profileScreenTitle">Profile</string>
    <string name="guest">Guest</string>
    <string name="signOut">Sign Out</string>
    <string name="signIn">Sign In</string>

    <!--My Order Screen -->
    <string name="myOrderScreenTitle">My Order</string>

    <!-- History Screen -->
    <string name="historyScreenTitle">Orders History</string>

    <!-- News Screen -->
    <string name="newsScreenTitle">News</string>

    <!-- Settings Screen -->
    <string name="settingsScreenTitle">Settings</string>

    <!-- About Screen -->
    <string name="aboutScreenTitle">About this App</string>

    <!-- Error Placeholder View -->
    <string name="defaultButtonRetry">Try again</string>
    <string name="defaultErrorStarter">Error happened</string>

    <!-- Progress Placeholder View -->
    <string name="cookingThingForYou">We are cooking %s for you</string>
    <string name="defaultProgressThing">this</string>

    <!-- Empty Placeholder View -->
    <string name="emptyList">Looks like our %s is empty right now</string>
    <string name="defaultEmptyThing">list</string>

    <!-- Common -->
    <string name="clickAgainToCloseApp">Click \"Back\" again to close Läcker</string>
    <string name="rurSymbolPrice">%s ₽</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>

</resources>