<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigateMyOrder"
            android:title="@string/myOrderScreenTitle" />
        <item
            android:id="@+id/navigateHistory"
            android:title="@string/historyScreenTitle" />
        <item
            android:id="@+id/navigateNews"
            android:title="@string/newsScreenTitle" />
        <item
            android:id="@+id/navigateSettings"
            android:title="@string/settingsScreenTitle" />
        <item
            android:id="@+id/navigateAbout"
            android:title="@string/aboutScreenTitle" />
    </group>
</menu>