<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_32sdp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <requestFocus />

    <TextView
        android:id="@+id/commentSingleTitle"
        style="@style/Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:clickable="false"
        android:text="@string/orderImmediately"
        android:textColor="@color/brown"
        android:textSize="@dimen/_14ssp" />

    <com.lacker.visitors.views.SmallMenuItemView
        android:id="@+id/itemField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_8sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentFieldLayout"
        style="@style/InputStyle.NoTopHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentField"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/leaveYourCommentHere" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:text="@string/confirm" />
</LinearLayout>
