<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_colored_rounded_corners"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_8sdp"
    android:weightSum="22"
    tools:layout_marginHorizontal="@dimen/_32sdp">

    <TextView
        android:id="@+id/menuTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/menuScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_menu_book_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favouriteTab"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favouriteTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/favouriteScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/basketTab"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@id/menuTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/basketTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/basketScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_outline_shopping_basket_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/orderTab"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/favouriteTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/orderScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_list_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/basketTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/basketBadge"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_3ssp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/blueDark"
        app:layout_constraintEnd_toEndOf="@id/basketTab"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99" />

    <TextView
        android:id="@+id/favouriteBadge"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_3ssp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/blueDark"
        app:layout_constraintEnd_toEndOf="@id/favouriteTab"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99" />

    <TextView
        android:id="@+id/orderBadge"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_3ssp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/greyNotTransparent"
        app:layout_constraintEnd_toEndOf="@id/orderTab"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99" />

</androidx.constraintlayout.widget.ConstraintLayout>